[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/MainLevel.gd" type="Script" id=1]
[ext_resource path="res://Player Outline/PlayerOutline.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://tileset.tres" type="TileSet" id=5]
[ext_resource path="res://Player Outline/animations/spriteframes.tres" type="SpriteFrames" id=6]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=7]
[ext_resource path="res://backdrop/mountains.png" type="Texture" id=8]
[ext_resource path="res://backdrop/sky.png" type="Texture" id=9]
[ext_resource path="res://Fonts/DJGROSS.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Fonts/Lulo Clean/FontsFree-Net-Lulo-Clean-W01-One-Bold.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Fonts/Lulo Clean/Lulo Clean W03 Three Bold/Lulo Clean W03 Three Bold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://sounds/Music.wav" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=3]
size = 85
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 85
extra_spacing_top = -5
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 10 )

[sub_resource type="ShaderMaterial" id=2]

[node name="MainLevel" type="Node2D" groups=[
"main level",
]]
script = ExtResource( 1 )

[node name="Player" parent="." groups=[
"player",
"reset",
] instance=ExtResource( 3 )]
z_index = 2

[node name="Ball" parent="." groups=[
"ball",
"reset",
] instance=ExtResource( 4 )]
position = Vector2( -20.5619, 0 )
z_index = 4
collision_layer = 2
collision_mask = 2

[node name="Player Trail" type="Node2D" parent="." groups=[
"reset",
]]
z_index = 1
script = ExtResource( 2 )
trail_speed = 80.0
num_trails = 7
pos_lerp = 20.0
target_path = NodePath("../../MainLevel/Player")

[node name="Sprite" type="AnimatedSprite" parent="Player Trail"]
self_modulate = Color( 1, 1, 1, 0.196078 )
scale = Vector2( 0.2, 0.2 )
frames = ExtResource( 6 )
animation = "Fall"
offset = Vector2( 0, -3.5 )

[node name="Camera2D" type="Camera2D" parent="." groups=[
"camera",
"reset",
]]
current = true
zoom = Vector2( 0.2, 0.2 )
script = ExtResource( 7 )

[node name="Node2D" type="Node2D" parent="Camera2D"]
scale = Vector2( 0.8, 0.8 )

[node name="Label2" type="Label" parent="Camera2D/Node2D"]
margin_left = -86.7619
margin_top = -16.2842
margin_right = 815.238
margin_bottom = 240.716
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.223529, 0.545098, 0.666667, 0.615686 )
text = "REVOLUTIONS
PER MINUTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Camera2D/Node2D"]
margin_left = -85.7619
margin_top = -16.2842
margin_right = 816.238
margin_bottom = 250.716
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.537255, 0.32549, 0.929412, 0.45098 )
text = "REVOLUTIONS
PER MINUTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPM3" type="Label" parent="Camera2D"]
margin_left = -33.0
margin_top = -44.0
margin_right = 295.0
margin_bottom = 133.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.552941, 0, 0, 1 )
text = "1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPM2" type="Label" parent="Camera2D"]
margin_left = -33.0
margin_top = -44.0
margin_right = 295.0
margin_bottom = 133.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.552941, 0, 0, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPM1" type="Label" parent="Camera2D"]
margin_left = -33.0
margin_top = -44.0
margin_right = 295.0
margin_bottom = 133.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.552941, 0, 0, 1 )
text = "2"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.15, 0.15 )
z_index = 3
tile_set = ExtResource( 5 )
format = 1
tile_data = PoolIntArray( 262140, 0, 8, 262141, 0, 10, 262142, 0, 10, 262143, 0, 11, 327674, 0, 8, 327675, 0, 10, 327676, 0, 65541, 327677, 0, 131081, 327678, 0, 131081, 327679, 0, 65542, 262144, 0, 10, 262145, 0, 10, 262146, 0, 10, 262147, 0, 10, 262148, 0, 11, 393209, 0, 8, 393210, 0, 65541, 393211, 0, 131081, 393212, 0, 131081, 393213, 0, 131081, 393214, 0, 131081, 393215, 0, 131081, 327680, 0, 131081, 327681, 0, 131081, 327682, 0, 131081, 327683, 0, 131081, 327684, 0, 131083, 458744, 0, 196609, 458745, 0, 196613, 458746, 0, 196617, 458747, 0, 196617, 458748, 0, 196617, 458749, 0, 196617, 458750, 0, 196617, 458751, 0, 196617, 393216, 0, 196617, 393217, 0, 196617, 393218, 0, 196617, 393219, 0, 196617, 393220, 0, 196614, 393221, 0, 196610, 393222, 0, 196611 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2( 0.2, 0.2 )
transform = Transform2D( 0.2, 0, 0, 0.2, 0, 0 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -1
motion_scale = Vector2( 1.28, 0.64 )
motion_mirroring = Vector2( 1536, 864 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
material = SubResource( 2 )
margin_left = -373.749
margin_top = 6.0
margin_right = 1162.25
margin_bottom = 870.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.6, 0.8 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource( 2 )
margin_left = -567.253
margin_top = -61.4036
margin_right = 1352.75
margin_bottom = 1018.6
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.222
autoplay = true
